carousel with user personas added

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -95,6 +95,12 @@
   width: 90%;
 }
 
+.carousel-container {
+  width: 800px;
+  height: 450px;
+  margin: 4rem auto;
+}
+
 .shortdivider {
   position: relative;
   right: 40%;
