--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -12,8 +12,7 @@ $color-outline: #7f7f7f80;
 }
 
 .home-page {
-  z-index: 0;
-  padding: 5rem 0;
+  align-items: center;
   justify-content: space-around;
   background-image: url("https://wallpapers.com/images/featured-full/cyberpunk-city-dpqrj66joh42kt7d.jpg");
   background-repeat: no-repeat;
@@ -40,35 +39,6 @@ $color-outline: #7f7f7f80;
       font-size: 2rem;
       @media screen and (max-width: 800px) {
         font-size: 1.4rem;
-      }
-    }
-  }
-
-  .project-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    .project1,
-    .project2 {
-      position: relative;
-      width: 250px;
-      height: auto;
-      z-index: 999;
-
-      @media screen and (max-width: 800px) {
-        display: none;
-      }
-
-      @media screen and (max-width: 1200px) {
-        width: 200px;
-      }
-    }
-
-    &:hover {
-      .card {
-        transform: translateY(80px);
       }
     }
   }
@@ -173,5 +143,182 @@ $color-outline: #7f7f7f80;
     to {
       transform: rotateX(360deg);
     }
+  }
+}
+
+.about-page {
+  z-index: 9;
+  width: 100%;
+  height: auto;
+  display: flex;
+  padding: 4rem 0;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center;
+  position: relative;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .box {
+    display: flex;
+    width: 45%;
+    left: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    @media screen and (max-width: 800px) {
+      width: 80%;
+    }
+
+    h2 {
+      font-size: 2.5rem;
+    }
+
+    .profile-img {
+      width: 300px;
+      margin-bottom: 24px;
+      border-radius: 50%;
+      border: 1px solid #fff;
+
+      @media screen and (max-width: 800px) {
+        width: 200px;
+      }
+    }
+
+    .goals {
+      flex-direction: column;
+      width: 90%;
+
+      i {
+        font-size: 1.7rem;
+        font-weight: 300;
+        text-align: center;
+      }
+
+      @media screen and (max-width: 800px) {
+        flex-direction: column;
+        position: relative;
+        left: 0%;
+        width: 100%;
+        display: flex;
+      }
+    }
+
+    .education {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding: 2rem 0;
+      font-size: 1.9rem;
+
+      @media screen and (max-width: 800px) {
+        width: 100%;
+        font-size: 1.6rem;
+        display: flex;
+        flex-direction: column;
+      }
+
+      h1 {
+        font-size: 1.8rem;
+        color: #fff;
+        text-align: left;
+        font-weight: 600;
+        margin: 0px;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+        color: #afe4ff;
+        text-align: left;
+        font-weight: 500;
+        margin: 0px;
+      }
+
+      p {
+        font-size: 1.8rem;
+        color: #fff;
+        text-align: left;
+        font-weight: 500;
+        margin: 1rem 0;
+      }
+    }
+  }
+
+  .overview-bio {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    color: #fff;
+    width: 45%;
+    z-index: 9999;
+    font-size: 1.9rem;
+
+    .message {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      padding: 2rem 0;
+
+      p {
+        text-align: left;
+      }
+    }
+
+    @media screen and (max-width: 800px) {
+      flex-direction: column;
+      padding: 1rem 0;
+      position: relative;
+      width: 90%;
+      top: 0%;
+      left: 0%;
+
+      .message {
+        width: 100%;
+        font-size: 1.6rem;
+        display: flex;
+        flex-direction: column;
+      }
+    }
+  }
+
+  ul.ui-list {
+    list-style: none;
+    text-decoration: none;
+    display: flex;
+    font-size: 1.4rem;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    li {
+      width: fit-content;
+      margin: 1rem;
+      padding: 1.5rem;
+      color: #fff;
+      border: 1px solid #000;
+      border-radius: 100px;
+      background: #384a537f;
+    }
+
+    svg {
+      margin: 0 0.5rem;
+    }
+  }
+
+  .border-list {
+    border-left: 5px solid #afe4ff;
+    padding-left: 4rem;
+    margin: 2rem 0;
+  }
+
+  .header-zone {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
