--- a/src/components/Projects/GoGenesisUI/index.scss
+++ b/src/components/Projects/GoGenesisUI/index.scss
@@ -59,13 +59,13 @@
       flex-direction: row;
     }
 
-    img {
-      width: 600px;
-    }
-
     .zoomedimg {
-      width: 400px;
-      margin: auto;
+      width: 300px;
+      height: 400px;
+      margin: auto 2rem;
+      border-radius: 10px;
+      border: 1px solid #ffffff;
+      object-fit: cover;
     }
 
     p.wrapper-text {
@@ -90,6 +90,38 @@
       color: #fff;
       font-size: 2.2rem;
       letter-spacing: 0px;
+    }
+  }
+
+  .message {
+    ul.cool-list {
+      list-style: none;
+      text-decoration: none;
+      display: flex;
+      font-size: 1.4rem;
+      flex-direction: row;
+      flex-wrap: wrap;
+  
+      li {
+        width: fit-content;
+        margin: 1rem;
+        padding: 1.5rem;
+        color: #fff;
+        border: 1px solid rgb(227, 227, 227);
+        border-radius: 100px;
+        background: #759caf7f;
+      }
+  
+      svg {
+        margin: 0 0.5rem;
+      }
+
+      .logo {
+        width: 16px;
+        height: auto;
+        margin: 0 1rem 0 0;
+        position: relative;
+      }
     }
   }
 }
