--- a/src/components/Projects/inHandy/index.scss
+++ b/src/components/Projects/inHandy/index.scss
@@ -2,6 +2,8 @@
   height: auto;
   padding: 0px;
   color: #fff;
+  align-items: center;
+  flex-direction: column;
 
   .border-list {
     border-left: 4px solid #eea3ff;
