--- a/src/components/Projects/index.scss
+++ b/src/components/Projects/index.scss
@@ -1,4 +1,10 @@
 .projects-page {
+  height: auto;
+  padding: 0px;
+  color: #fff;
+  align-items: center;
+  flex-direction: column;
+
   .projects-backdrop {
     width: 100%;
     padding: 5rem 0;
