--- a/src/components/Projects/GoGenesisUI/index.scss
+++ b/src/components/Projects/GoGenesisUI/index.scss
@@ -64,7 +64,7 @@
     .zoomedimg {
       width: 300px;
       height: 400px;
-      margin: auto 2rem;
+      margin: auto;
       border-radius: 10px;
       border: 1px solid #ffffff;
       object-fit: cover;
@@ -108,6 +108,7 @@
         width: fit-content;
         margin: 1rem;
         padding: 1.5rem;
+        font-weight: 400;
         color: #fff;
         border: 1px solid rgb(227, 227, 227);
         border-radius: 100px;
@@ -123,6 +124,30 @@
         height: auto;
         margin: 0 1rem 0 0;
         position: relative;
+      }
+    }
+
+    ul.detailed {
+      width: 100%;
+      list-style: none;
+      text-decoration: none;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+
+      li {
+        width: 100%;
+        margin: 1rem;
+        font-size: 1.4rem;
+        font-weight: 400;
+        padding: 1.5rem;
+        color: #fff;
+        border-radius: 8px;
+        background: #2d31367f;
+      }
+
+      svg {
+        margin: 0 1.5rem 0 0;
       }
     }
   }
