--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -101,9 +101,9 @@
     input[type="text"],
     input[type="email"] {
       width: 100%;
-      border: 1px solid #ffffff60;
+      border: 1px solid #ffffffce;
       border-radius: 6px;
-      background: #2c2c2c;
+      background: #e5dde6;
       height: 50px;
       font-size: 16px;
       color: #000;
@@ -113,9 +113,9 @@
 
     textarea {
       width: 100%;
-      border: 1px solid #ffffff60;
+      border: 1px solid #ffffffce;
       border-radius: 6px;
-      background: #2c2c2c;
+      background: #e5dde6;
       height: 50px;
       font-size: 16px;
       color: #000;
