--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -129,7 +129,7 @@
   z-index: 1;
 
   &:hover {
-    color: #fff;
+    color: #000;
   }
 }
 
@@ -140,7 +140,7 @@
   top: 0;
   height: 100%;
   width: 100%;
-  background: #41c9ff9b;
+  background: #FFFFFF;
   z-index: -1;
   border-radius: 10rem;
   transition: 0.45 ease all;
