--- a/src/components/PageNotFound/index.scss
+++ b/src/components/PageNotFound/index.scss
@@ -1,10 +1,13 @@
 .no-page-found {
   width: 100%;
   height: 100%;
+  color: #fff;
+  background: #111213;
   overflow-y: hidden;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  align-items: center;
 
   h1 {
     font-size: 4rem;
