--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -3,10 +3,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
-  background-image: url("https://wallpapers.com/images/featured-full/cyberpunk-city-dpqrj66joh42kt7d.jpg");
+  background-image: url("https://c4.wallpaperflare.com/wallpaper/473/410/441/cyberpunk-cyber-dark-cyberpunk-movies-wallpaper-preview.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center bottom;
 
   @media screen and (max-width: 800px) {
     flex-direction: column;
