--- a/src/components/AboutFull/index.scss
+++ b/src/components/AboutFull/index.scss
@@ -198,11 +198,13 @@
 
   .flip-box-front,
   .flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
   }
 
   .flip-box-front {
