--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -14,10 +14,10 @@ $color-outline: #7f7f7f80;
 .home-page {
   align-items: center;
   justify-content: space-around;
-  background-image: url("https://wallpapers.com/images/featured-full/cyberpunk-city-dpqrj66joh42kt7d.jpg");
+  background-image: url("https://c4.wallpaperflare.com/wallpaper/473/410/441/cyberpunk-cyber-dark-cyberpunk-movies-wallpaper-preview.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: center bottom;
 
   .header-zone {
     position: relative;
