--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -10,6 +10,28 @@
   position: relative;
 }
 
+h1 {
+  font-size: 5rem;
+  cursor: pointer;
+  font-family: sans-serif;
+  color: #fff;
+  font-weight: 900;
+  margin: 0 0 1rem 0;
+  position: relative;
+}
+
+h2 {
+  font-size: 1.4rem;
+  position: relative;
+  color: #fff;
+  cursor: pointer;
+  text-align: center;
+  margin: 0 0 2rem 0;
+  font-weight: 100;
+  font-family: sans-serif;
+  animation: fadeIn 1.4s 2s backwards;
+}
+
 .border-list {
   border-left: 4px solid #fff;
   padding-left: 4rem;
@@ -100,6 +122,12 @@
   width: 800px;
   height: 450px;
   margin: 4rem auto;
+
+  @media screen and (max-width: 768px) {
+    width: 350px;
+    height: 200px;
+    margin: 2rem 0 4rem 0;
+  }
 }
 
 .shortdivider {
@@ -140,7 +168,7 @@
   top: 0;
   height: 100%;
   width: 100%;
-  background: #FFFFFF;
+  background: #ffffff;
   z-index: -1;
   border-radius: 10rem;
   transition: 0.45 ease all;
@@ -225,6 +253,8 @@
     }
 
     @media screen and (max-width: 768px) {
+      width: 100%;
+      background-image: linear-gradient(to bottom, #00000080, #00000000);
       text-align: center;
     }
 
@@ -362,11 +392,25 @@
   }
 
   .project-detail {
-    width: 90%;
+    width: 100%;
     margin: 4.8rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    p {
+      font-size: 1.6rem;
+      margin: auto 2rem;
+      text-align: center;
+
+      @media screen and (max-width: 800px) {
+        font-size: 1.2rem;
+      }
+    }
+
+    @media screen and (max-width: 800px) {
+      margin: 2rem 0;
+    }
   }
 
   .header-zone {
@@ -440,7 +484,7 @@
     font-size: 1.9rem;
 
     @media screen and (max-width: 800px) {
-      width: 80%;
+      width: 90%;
       align-items: center;
       font-size: 1.2rem;
     }
@@ -465,7 +509,7 @@
         padding: 0 2rem;
         flex-direction: column;
         align-items: center;
-        text-align: center;
+        text-align: left;
       }
     }
 
@@ -504,7 +548,8 @@
       justify-content: center;
 
       @media screen and (max-width: 800px) {
-        width: 80%;
+        width: 90%;
+        margin: 1rem 0;
         font-size: 1.4rem;
       }
 
