--- a/src/components/Projects/inHandy/index.scss
+++ b/src/components/Projects/inHandy/index.scss
@@ -41,7 +41,7 @@
 
   .header-backdrop {
     width: 100%;
-    padding: 5rem 0;
+    padding: 0;
     z-index: 0;
     justify-content: space-around;
     background-image: url("https://acutrans.com/wp-content/uploads/2020/08/ASL.png");
@@ -52,9 +52,13 @@
 
   .header-zone {
     width: 100%;
-    margin: 0 0 3rem 0;
+    margin: 4rem 0 3rem 0;
     text-align: center;
 
+    @media screen and (max-width: 800px) {
+      margin: 0 0 2rem 0;
+    }
+    
     h1 {
       color: #fff;
       margin-bottom: 2px;
@@ -68,6 +72,16 @@
 
   .overview-col {
     align-items: center;
+
+    .wrapper {
+      @media screen and (max-width: 800px) {
+        margin: 1rem auto;
+      }
+    }
+
+    .title-graphic {
+      margin: 3rem 0 0rem 0;
+    }
 
     .character-img {
       width: 400px;
