--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -399,9 +399,9 @@ h2 {
     align-items: center;
 
     p {
-      font-size: 1.6rem;
+      font-size: 1.8rem;
       margin: auto 2rem;
-      text-align: center;
+      text-align: left;
 
       @media screen and (max-width: 800px) {
         font-size: 1.2rem;
