--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -29,6 +29,10 @@ $color-outline: #7f7f7f80;
     height: 100%;
     width: auto;
 
+    @media screen and (max-width: 800px) {
+      background-image: linear-gradient(to bottom, #00000090, #00000040);
+    }
+
     h1 {
       font-size: 8rem;
       @media screen and (max-width: 800px) {
@@ -66,12 +70,82 @@ $color-outline: #7f7f7f80;
       margin: 500px;
     }
 
-    .frontendcube,
+    .frontendcube {
+      transition: transform 2s ease-in;
+      transform-style: preserve-3d;
+      width: $width;
+      height: $height;
+
+      &.cube1 {
+        animation: horizontal-spin 7s infinite linear;
+        margin: 4rem;
+
+        @media screen and (max-width: 800px) {
+          margin: 3rem;
+        }
+      }
+      &.cube2 {
+        animation: horizontal-spin 7s infinite linear;
+        animation-direction: reverse;
+        margin: 4rem;
+
+        @media screen and (max-width: 800px) {
+          margin: 3rem;
+        }
+      }
+
+      .box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        color: white;
+        background: $color-inline;
+        border: 1px solid $color-outline;
+        text-transform: uppercase;
+        letter-spacing: 0.08em;
+        font-family: "Roboto", sans-serif;
+        font-size: 80px;
+        font-weight: 500;
+        @include flex;
+
+        &.face1 {
+          transform: translateZ(75px);
+        }
+        &.face2 {
+          transform: translateZ(-75px) rotateY(180deg);
+        }
+        &.face3 {
+          transform: rotateX(-90deg) translateY(-75px);
+          transform-origin: top center;
+        }
+        &.face4 {
+          transform: rotateX(90deg) translateY(75px);
+          transform-origin: bottom center;
+        }
+        &.face5 {
+          transform: rotateY(270deg) translateX(-75px);
+          transform-origin: center left;
+        }
+        &.face6 {
+          transform: rotateY(-270deg) translateX(75px);
+          transform-origin: top right;
+        }
+      }
+    }
+
     .backendcube {
       transition: transform 2s ease-in;
       transform-style: preserve-3d;
       width: $width;
       height: $height;
+
+      @media screen and (max-width: 800px) {
+        display: none;
+      }
 
       &.cube1 {
         animation: horizontal-spin 7s infinite linear;
