--- a/src/components/Projects/inHandy/index.scss
+++ b/src/components/Projects/inHandy/index.scss
@@ -55,10 +55,11 @@
     margin: 4rem 0 3rem 0;
     text-align: center;
 
-    @media screen and (max-width: 800px) {
+    @media screen and (max-width: 768px) {
       margin: 0 0 2rem 0;
+      background-image: linear-gradient(to bottom, #00000080, #00000000);
     }
-    
+
     h1 {
       color: #fff;
       margin-bottom: 2px;
