--- a/src/components/AboutFull/index.scss
+++ b/src/components/AboutFull/index.scss
@@ -38,13 +38,22 @@
       width: 100%;
       text-align: left;
       font-size: 6rem;
+
+      @media screen and (max-width: 800px) {
+        font-size: 3rem;
+      }
     }
+
     h2 {
       width: 100%;
       text-align: left;
       color: #ffffffb5;
       font-size: 2rem;
       font-weight: 400;
+
+      @media screen and (max-width: 800px) {
+        font-size: 1.5rem;
+      }
     }
   }
 
@@ -63,6 +72,10 @@
         text-align: left;
         font-size: 6rem;
         margin: 1rem 0;
+
+        @media screen and (max-width: 800px) {
+          font-size: 3rem;
+        }
       }
 
       h2 {
@@ -72,11 +85,19 @@
         color: #ffffffb5;
         font-size: 2rem;
         font-weight: 700;
+
+        @media screen and (max-width: 800px) {
+          font-size: 1.5rem;
+        }
       }
 
       h3 {
         font-size: 2rem;
         margin: 1rem 0;
+
+        @media screen and (max-width: 800px) {
+          font-size: 1rem;
+        }
       }
 
       p {
@@ -84,6 +105,10 @@
         text-align: left;
         font-size: 1.8rem;
         font-weight: 300;
+
+        @media screen and (max-width: 800px) {
+          font-size: 0.9rem;
+        }
       }
 
       ul.ui-list {
