--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -73,6 +73,58 @@
       z-index: 9999999;
     }
 
+    .linkedin {
+      color: #fff;
+      justify-self: center;
+      cursor: pointer;
+      font-size: 1.8rem;
+      position: relative;
+      margin: 0 3rem;
+      font-weight: 800;
+      display: flex;
+      align-items: center;
+      font-family: sans-serif;
+      letter-spacing: 3px;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: all 0.5s ease-in-out;
+
+      &:hover {
+        color: #157dc7;
+        transform: scale(0.95);
+      }
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
+
+    .github {
+      color: #fff;
+      justify-self: center;
+      cursor: pointer;
+      font-size: 1.8rem;
+      position: relative;
+      margin: 0 3rem;
+      font-weight: 800;
+      display: flex;
+      align-items: center;
+      font-family: sans-serif;
+      letter-spacing: 3px;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: all 0.5s ease-in-out;
+
+      &:hover {
+        color: #2ac715;
+        transform: scale(0.95);
+      }
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
+
     .to-section {
       color: #fff;
       justify-self: center;
