--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -1,5 +1,5 @@
 .nav {
-  background: #000000d5;
+  background: #1b1612;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -26,7 +26,7 @@
       position: relative;
       display: flex;
       align-items: center;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       letter-spacing: 3px;
       text-decoration: none;
     }
@@ -42,7 +42,7 @@
     font-weight: 800;
     display: flex;
     align-items: center;
-    font-family: sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 3px;
     text-decoration: none;
     text-transform: uppercase;
@@ -83,7 +83,7 @@
       font-weight: 800;
       display: flex;
       align-items: center;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       letter-spacing: 3px;
       text-decoration: none;
       text-transform: uppercase;
@@ -109,7 +109,7 @@
       font-weight: 800;
       display: flex;
       align-items: center;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       letter-spacing: 3px;
       text-decoration: none;
       text-transform: uppercase;
@@ -135,7 +135,7 @@
       font-weight: 800;
       display: flex;
       align-items: center;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       letter-spacing: 3px;
       text-decoration: none;
       text-transform: uppercase;
