--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,7 +1,7 @@
 footer {
-  background-color: #000;
+  background-color: #1b1612;
   display: flex;
-  border-top: 1px solid #bdebff;
+  border-top: 1px solid #ddc1a7;
   justify-content: space-between;
   align-items: center;
   text-align: center;
@@ -16,9 +16,10 @@ footer {
       align-items: flex-end;
       color: #fff;
       padding: 0 1rem;
+      transition: all 0.5s linear;
 
       &:hover {
-        color: aqua;
+        color: #8d8d8d;
       }
     }
   }
