--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -13,7 +13,7 @@
 h1 {
   font-size: 5rem;
   cursor: pointer;
-  font-family: sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #fff;
   font-weight: 900;
   margin: 0 0 1rem 0;
@@ -27,7 +27,7 @@ h2 {
   cursor: pointer;
   margin: 0 0 2rem 0;
   font-weight: 100;
-  font-family: sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   animation: fadeIn 1.4s 2s backwards;
 }
 
@@ -42,7 +42,7 @@ h2 {
 }
 
 .highlight {
-  color: #afe4ff;
+  color: #ddc1a7;
   font-weight: 500;
 }
 
@@ -260,7 +260,7 @@ h2 {
     h1 {
       font-size: 5rem;
       cursor: pointer;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #fff;
       font-weight: 900;
       margin: 0;
@@ -275,7 +275,7 @@ h2 {
       text-align: center;
       margin: 0;
       font-weight: 100;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       letter-spacing: 3px;
       animation: fadeIn 1.4s 2s backwards;
     }
@@ -283,7 +283,7 @@ h2 {
     p {
       font-size: 1.8rem;
       color: #fff;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       min-width: fit-content;
       animation: fadeIn 2s 2s backwards;
 
@@ -305,7 +305,7 @@ h2 {
       text-decoration: none;
       font-size: 1.8rem;
       color: #fff;
-      font-family: sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       font-weight: 400;
       min-width: fit-content;
 
