--- a/src/components/Navbar/MobileMenu/index.scss
+++ b/src/components/Navbar/MobileMenu/index.scss
@@ -22,7 +22,9 @@
     top: 85%;
     left: 0;
     list-style: none;
-    background-color: #000000f1;
+    background-image: linear-gradient(to bottom, #1b1612, #1b1612d3);
+
+    // background-color: #1b1612f1;
     flex-direction: column;
     align-items: center;
     transition: all 0.8s linear;
