--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -374,6 +374,7 @@ $color-outline: #7f7f7f80;
       margin: 1rem;
       padding: 1.5rem;
       color: #fff;
+      cursor: default;
       border-radius: 100px;
       background: #56463b;
       box-shadow: 0px 3px #000;
